--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.RetrofitAfrica"
         tools:targetApi="31">
         <activity
+            android:name=".view.GlossaryActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MenuActivity"
             android:exported="false">
             <meta-data
