--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Mar 27 10:00:20 CEST 2023
-sdk.dir=C\:\\Users\\adria\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\franr\\AppData\\Local\\Android\\Sdk
