--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.RetrofitAfrica"
         tools:targetApi="31">
         <activity
-            android:name=".view.TestSelector"
+            android:name=".view.TestActivity"
             android:exported="false" />
         <activity
             android:name=".view.GlossaryActivity"
