--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     // Room
     implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'androidx.databinding:databinding-runtime:7.1.2'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
 
