--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed May 31 13:46:27 CEST 2023
-sdk.dir=/home/franciscorodriguez/Android/Sdk
+sdk.dir=C\:\\Users\\franr\\AppData\\Local\\Android\\Sdk
