--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.RetrofitAfrica"
         tools:targetApi="31">
         <activity
+            android:name=".view.ScoreActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.QuizActivity"
             android:exported="false" />
         <activity
@@ -23,9 +26,6 @@
             android:exported="false" />
         <activity
             android:name=".view.GlossaryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TestActivity"
             android:exported="false" />
         <activity
             android:name=".view.MenuActivity"
