--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 31 13:46:27 CEST 2023
-sdk.dir=C\:\\Users\\adria\\AppData\\Local\\Android\\Sdk
+#Tue Jun 13 23:11:34 CEST 2023
+sdk.dir=C\:\\Users\\franr\\AppData\\Local\\Android\\Sdk
