--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,11 @@ dependencies {
 
     // Room
     implementation 'androidx.room:room-runtime:2.5.1'
-    implementation 'androidx.databinding:databinding-runtime:7.1.2'
+    implementation 'androidx.databinding:databinding-runtime:8.0.2'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
-
+    implementation("androidx.cardview:cardview:1.0.0")
     // Corrutinas
     implementation('org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4') {
         exclude group: 'com.google.guava', module: 'listenablefuture'
